# Pattern-Blue

./: .gitignore  README.md  pyproject.toml
data/processed/: episcanner  _results_2026.csv  episcanner_results_2026.csv  grafo_municipios.graphml  metrics_static_spatial.parquet
notebooks/: apply_2026.ipynb  preprocess_infodengue.ipynb  preprocess_shape_files.ipynb
src/: evaluate_models.py  plot_ablation.ipynb  train_ablation.py
