[project]
name = "dl-master"
version = "0.1.0"
description = "Deep Learning with TFT and TDA for Dengue Forecasting"
authors = [
    {name = "Zuilho Segundo", email = "segundozuilho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pytorch-forecasting",
    "giotto-tda",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "statsmodels",
    "geopandas>=1.1.1",
    "notebook>=7.5.0",
    "pyarrow>=22.0.0",
    "torch-geometric>=2.7.0",
    "tensorboard>=2.20.0",
    "lightning>=2.6.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tabulate>=0.10.0"
]

[tool.poetry]
# Equivalente ao antigo package-mode = false
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"